tests/expectations/parser/functions/function_name_is_not_identifier.out
Error [EPAR0370005]: expected an identifier -- found '100u8'
    --> test:4:16
     |
   4 |         return 100u8(0u8);
     |                ^^^^^